Adjusted About section

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>About Hanna Liashuk</title>
+    <title>Works Hanna Liashuk</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -77,25 +77,35 @@
         </div>
       </div>
     </nav>
-    <div class="about-sectionc container">
+    <h1>About me</h1>
+    <h3>Front-end developer from Ukraine</h3>
+    <div class="about-paragraphs">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+      </p>
+    </div>
+
+    <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <div class="about-section-content">
-            <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-            <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="projects.html" class="btn btn-branding">See my projects</a>
-          </div>
+        <div class="col-sm-4">
+          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
         </div>
-        <div class="col-lg-6">
-          <img src="images/patricia.png" class="img-fluid" />
+        <div class="col-sm-4">
+          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
         </div>
       </div>
+    </div>
+    <div id="contact" class="mt-5">
+      <h2 class="text-center">📮 Contact me</h2>
+      <a href="mailto:anny.wait@gmail.com" class="email-link">
+        anny.wait@gmail.com
+      </a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
