--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
               >
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="projects.html"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#contact"
                 >Contact</a
               >
