--- a/projects.html
+++ b/projects.html
@@ -77,35 +77,38 @@
         </div>
       </div>
     </nav>
-    <h1>About me</h1>
-    <h3>Front-end developer from Ukraine</h3>
-    <div class="about-paragraphs">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
-        </div>
-        <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
-        </div>
-        <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img src="images/yoga.png" class="img-fluid mb-3 rounded" />
+            <h3 class="text-center m-0">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/weather.png" class="img-fluid mb-3 rounded" />
+            <h3 class="text-center m-0">Weather Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JavaScript
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/dictionary.png" class="img-fluid mb-3 rounded" />
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/translate.png" class="img-fluid mb-3 rounded" />
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:anny.wait@gmail.com" class="email-link">
-        anny.wait@gmail.com
-      </a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
