--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#contact"
+              <a class="nav-link active" aria-current="page" href="contact.html"
                 >Contact</a
               >
             </li>
