--- a/about.html
+++ b/about.html
@@ -20,12 +20,16 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>About Hanna Liashuk</title>
+    <script
+      src="https://kit.fontawesome.com/bc2042c16e.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>About Patricia Pereira</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Hanna Liashuk</a>
+        <a class="navbar-brand" href="index.html">Patricia P.</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -93,7 +97,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" class="img-fluid" />
+          <img src="images/patricia.png" alt="patricia" class="img-fluid" />
         </div>
       </div>
       <footer>
