--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hanna Liashuk</title>
+    <title>Front-end developer - Patricia Pereira</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,11 +17,15 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/bc2042c16e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Hanna Liashuk</a>
+        <a class="navbar-brand" href="index.html">Patricia P.</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -73,9 +77,12 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
-    <h1>Hanna Liashuk</h1>
-    <h3>🇺🇦 Front-end developer, based in Europe</h3>
+    <div class="hero">
+      <p>👋 Hi I am</p>
+      <h1>Patricia Pereira</h1>
+      <h2 class="mb-5">Front-end developer, based in Portugal</h2>
+    </div>
+
     <div class="navigation-links">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
@@ -88,10 +95,10 @@
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa
-            minima ipsum doloremque cupiditate beatae, rem, distinctio provident
-            laboriosam dolores repellendus ratione eaque nostrum eligendi itaque
-            nulla magnam expedita? Voluptatibus, tempore.
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
           </p>
           <div class="mt-5">
             <a href="#" class="primary-link">Launch Yoga App</a>
