--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,16 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>Works Hanna Liashuk</title>
+    <script
+      src="https://kit.fontawesome.com/bc2042c16e.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Works - Patricia Pereira</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Hanna Liashuk</a>
+        <a class="navbar-brand" href="index.html">Patricia P.</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -82,26 +86,42 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/yoga.png" class="img-fluid mb-3 rounded" />
+            <img
+              src="images/yoga.png"
+              alt="yoga app"
+              class="img-fluid mb-3 rounded"
+            />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/weather.png" class="img-fluid mb-3 rounded" />
+            <img
+              src="images/weather.png"
+              alt="weather app"
+              class="img-fluid mb-3 rounded"
+            />
             <h3 class="text-center m-0">Weather Project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/dictionary.png" class="img-fluid mb-3 rounded" />
+            <img
+              src="images/dictionary.png"
+              alt="dictionary app"
+              class="img-fluid mb-3 rounded"
+            />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS with React
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/translate.png" class="img-fluid mb-3 rounded" />
+            <img
+              src="images/translate.png"
+              alt="translate app"
+              class="img-fluid mb-3 rounded"
+            />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS with React
