Recreated the project

--- a/about.html
+++ b/about.html
@@ -24,12 +24,14 @@
       src="https://kit.fontawesome.com/bc2042c16e.js"
       crossorigin="anonymous"
     ></script>
-    <title>About Patricia Pereira</title>
+    <title>About Hanna Liashuk</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Patricia P.</a>
+        <a class="navbar-brand" href="index.html"
+          ><img src="images/L__1_-removebg-preview.png" alt="Logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,9 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="about.html"
@@ -54,15 +54,12 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="projects.html"
+              <a class="nav-link" aria-current="page" href="projects.html"
                 >Work</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contact.html"
+              <a class="nav-link" aria-current="page" href="contact.html"
                 >Contact</a
               >
             </li>
@@ -81,53 +78,74 @@
         </div>
       </div>
     </nav>
-    <div class="about-sectionc container">
+    <div class="about-section container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
-            <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-            <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
+          <div class="about-section">
+            <h1 class="mb-4">Hi, I am Hanna Liashuk</h1>
+            <h2 class="mb-4">Frontend Developer, based in Ukraine.</h2>
             <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I’m currently seeking new opportunities in front-end development. I’m open to work remotely and have flexible hours. I’m highly skilled in JavaScript and React.
             </p>
-            <a href="projects.html" class="btn btn-branding">See my projects</a>
+            <a href="projects.html" class="primary-link">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" alt="patricia" class="img-fluid" />
+          <img src="images/Photo 23.09.2023, 18 28 21.jpg" alt="Hanna" class="img-fluid" />
         </div>
       </div>
-      <footer>
-        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-          <div>
-            <h4>Work Inquiry</h4>
-            <p class="text-muted">Let's work together</p>
-          </div>
-          <div>
-            <a href="contact.html" class="btn btn-branding mt-3">Contact me</a>
-          </div>
-        </div>
-        <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:patricia@gmail.com" class="email-link">
-            patricia@gmail.com
-          </a>
-        </div>
-        <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/patricia" target="_blank">
-            <i class="fab fa-github" aria-hidden="true"></i>
-          </a>
-          <a href="https://www.instragram.com/patricia" target="_blank">
-            <i class="fab fa-instagram" aria-hidden="true"></i>
-          </a>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            <i class="fab fa-twitter" aria-hidden="true"></i>
-          </a>
-        </div>
-      </footer>
     </div>
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a href="contact.html" class="primary-link" title="Contact Hanna"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:anny.wait@gmail.com"
+          class="email-link"
+          title="Email Hanna"
+        >
+          anny.wait@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://github.com/hanna-8l"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fab fa-github" aria-hidden="true"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fab fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fab fa-twitter" aria-hidden="true"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Hanna Liashuk, and is
+        <a href="https://github.com/hanna-8l/About-me" target="_blank"
+          ><open-sourced>open-sourced
+        </a>
+      </p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
