--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Patricia Pereira</title>
+    <meta
+      name="description"
+      content="Hanna - Web Developer. I build responsive and user-friendly web applications."
+    />
+    <title>Contact Hanna Liashuk</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -25,7 +29,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Patricia P.</a>
+        <a class="navbar-brand" href="index.html"
+          ><img src="images/L__1_-removebg-preview.png" alt="Logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,20 +46,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="about.html"
+              <a class="nav-link" aria-current="page" href="about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="projects.html"
+              <a class="nav-link" aria-current="page" href="projects.html"
                 >Work</a
               >
             </li>
@@ -77,30 +78,57 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
-    <h1>Hanna Liashuk</h1>
-    <h3>🇺🇦 Front-end developer, based in Europe</h3>
-    <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
-    </div>
     <div class="contant-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
-        <h3>Email</h3>
-        <p><a href="mailto:patricia@gmail.com"> patricia@gmail.com </a></p>
-        <h3>Twitter</h3>
-        <p>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            @patricia
-          </a>
-        </p>
-        <h3>Instagram</h3>
-        <p>
-          <a href="https://www.instagram.com/patricia.codes" target="_blank">
-            @patricia.codes
-          </a>
-        </p>
+        <div class="row">
+          <div class="col-md-8">
+            <form
+              action="https://formspree.io/f/mwkalajy"
+              method="POST"
+              class="border p-3 rounded mb-3"
+            >
+              <div class="mb-3">
+                <label class="form-label"> Your email: </label>
+                <input
+                  type="email"
+                  name="_replyto"
+                  class="form-control"
+                  required=""
+                  autofocus=""
+                />
+              </div>
+              <div class="mb-3">
+                <label class="form-label"> Your message: </label>
+                <textarea
+                  name="message"
+                  class="form-control"
+                  required=""
+                ></textarea>
+              </div>
+              <button type="submit" class="primary-link">Send</button>
+            </form>
+          </div>
+          <div class="col-md-4">
+            <h3>Email</h3>
+            <p><a href="mailto:patricia@gmail.com"> anny.wait@gmail.com </a></p>
+            <h3>Twitter</h3>
+            <p>
+              <a href="https://www.twitter.com/patricia" target="_blank">
+                @hanna
+              </a>
+            </p>
+            <h3>Instagram</h3>
+            <p>
+              <a
+                href="https://www.instagram.com/patricia.codes"
+                target="_blank"
+              >
+                @anny.wait
+              </a>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
@@ -110,25 +138,49 @@
           <p class="text-muted">Let's work together</p>
         </div>
         <div>
-          <a href="contact.html" class="btn btn-branding mt-3">Contact me</a>
+          <a href="contact.html" class="primary-link" title="Contact Hanna"
+            >Contact me</a
+          >
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:patricia@gmail.com" class="email-link">
-          patricia@gmail.com
+        <a
+          href="mailto:anny.wait@gmail.com"
+          class="email-link"
+          title="Email Hanna"
+        >
+          anny.wait@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.github.com/patricia" target="_blank">
+        <a
+          href="https://github.com/hanna-8l"
+          target="_blank"
+          title="GitHub Profile"
+        >
           <i class="fab fa-github" aria-hidden="true"></i>
         </a>
-        <a href="https://www.instragram.com/patricia" target="_blank">
+        <a
+          href="https://www.instragram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
           <i class="fab fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="https://www.twitter.com/patricia" target="_blank">
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter Profile"
+        >
           <i class="fab fa-twitter" aria-hidden="true"></i>
         </a>
       </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Hanna Liashuk, and is
+        <a href="https://github.com/hanna-8l/About-me" target="_blank"
+          ><open-sourced>open-sourced
+        </a>
+      </p>
     </footer>
   </body>
 </html>
