--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Front-end developer - Patricia Pereira</title>
+    <meta
+      name="description"
+      content="Hanna - Web Developer. I build responsive and user-friendly web applications."
+    />
+    <title>Front-end developer - Hanna Liashuk</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -25,7 +29,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Patricia P.</a>
+        <a class="navbar-brand" href="index.html"
+          ><img src="images/L__1_-removebg-preview.png" alt="Logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,20 +51,17 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="about.html"
+              <a class="nav-link" aria-current="page" href="about.html"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="projects.html"
+              <a class="nav-link" aria-current="page" href="projects.html"
                 >Work</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contact.html"
+              <a class="nav-link" aria-current="page" href="contact.html"
                 >Contact</a
               >
             </li>
@@ -79,63 +82,79 @@
     </nav>
     <div class="hero">
       <p>👋 Hi I am</p>
-      <h1>Patricia Pereira</h1>
-      <h2 class="mb-5">Front-end developer, based in Portugal</h2>
+      <h1>Hanna Liashuk</h1>
+      <h2 class="mb-5">Front-end developer, based in Ukraine</h2>
     </div>
-
     <div class="navigation-links">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
+    <p class="text-cent m-5">Check out some of my featured projects below</p>
     <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/yoga.png"
+            alt="Yoga project preview"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Yoga app</h2>
+            <p class="mb-5 text-muted">
+              I entered the world of front-end development by gaining some
+              knowledge in HTML, CSS, and JavaScript. I used my knowledge of
+              these languages, along with my new skills in VS Code, to build a
+              landing page about Yoga. The page utilizes JavaScript functions to
+              create user interaction.
+            </p>
+            <a href="/projects.html" class="primary-link">Launch Yoga App</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather app</h2>
+            <p class="mb-5 text-muted">
+              I built a ForecastHub JavaScript weather app in SheCodes Plus, an
+              advanced 8-week JavaScript coding workshop. Building upon my
+              previously-gained knowledge, I also became skilled in Bootstrap,
+              API’s, real-life development workflow, hosting, and advanced
+              JavaScript. I combined all of these skills to create a
+              fully-functioning weather app.
+            </p>
+            <a href="/projects.html" class="primary-link">Launch Weather App</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/weather.png"
+            alt="Weather project preview"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
       <div class="row">
-        <div class="col-md-6">
-          <img src="images/yoga.png" alt="yoga" class="img-fluid rounded" />
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/yogurt.png"
+            alt="Yogurt project preview"
+            class="img-fluid rounded"
+          />
         </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
-          <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
-          </div>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-            nihil et architecto dolore minus, earum delectus quo eos eum quam
-            voluptate id placeat repellat distinctio culpa nesciunt dolor ex
-            cumque.
-          </p>
-          <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <img src="images/weather.png" alt="yoga" class="img-fluid rounded" />
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img src="images/yogurt.png" alt="yoga" class="img-fluid rounded" />
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yogurt app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
-            excepturi veniam aut repellat ratione eaque quod explicabo
-            necessitatibus, consequatur sapiente provident quibusdam aperiam,
-            eveniet amet. Maxime consequuntur recusandae nisi non!
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Yogurt app</h2>
+            <p class="mb-5 text-muted">
+              I entered the world of front-end development by gaining some
+              knowledge in HTML, CSS, and JavaScript. I used my knowledge of
+              these languages, along with my new skills in VS Code, to build a
+              landing page about Yogurt. The page utilizes JavaScript functions
+              to create user interaction.
+            </p>
+            <a href="/projects.html" class="primary-link">Launch Yogurt App</a>
           </div>
         </div>
       </div>
@@ -147,25 +166,49 @@
           <p class="text-muted">Let's work together</p>
         </div>
         <div>
-          <a href="contact.html" class="btn btn-branding mt-3">Contact me</a>
+          <a href="contact.html" class="primary-link" title="Contact Hanna"
+            >Contact me</a
+          >
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:patricia@gmail.com" class="email-link">
-          patricia@gmail.com
+        <a
+          href="mailto:anny.wait@gmail.com"
+          class="email-link"
+          title="Email Hanna"
+        >
+          anny.wait@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.github.com/patricia" target="_blank">
+        <a
+          href="https://github.com/hanna-8l"
+          target="_blank"
+          title="GitHub Profile"
+        >
           <i class="fab fa-github" aria-hidden="true"></i>
         </a>
-        <a href="https://www.instragram.com/patricia" target="_blank">
+        <a
+          href="https://www.instragram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
           <i class="fab fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="https://www.twitter.com/patricia" target="_blank">
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter Profile"
+        >
           <i class="fab fa-twitter" aria-hidden="true"></i>
         </a>
       </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Hanna Liashuk, and is
+        <a href="https://github.com/hanna-8l/About-me" target="_blank"
+          ><open-sourced>open-sourced
+        </a>
+      </p>
     </footer>
   </body>
 </html>
