--- a/projects.html
+++ b/projects.html
@@ -24,12 +24,14 @@
       src="https://kit.fontawesome.com/bc2042c16e.js"
       crossorigin="anonymous"
     ></script>
-    <title>Works - Patricia Pereira</title>
+    <title>Works - Hanna Liashuk</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Patricia P.</a>
+        <a class="navbar-brand" href="index.html"
+          ><img src="images/L__1_-removebg-preview.png" alt="Logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,16 +46,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="about.html"
+              <a class="nav-link" aria-current="page" href="about.html"
                 >About</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a
                 class="nav-link active"
                 aria-current="page"
@@ -62,7 +62,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contact.html"
+              <a class="nav-link" aria-current="page" href="contact.html"
                 >Contact</a
               >
             </li>
@@ -93,6 +93,9 @@
             />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
+            <div class="text-center mt-4 mb-5">
+              <a href="https://www.yogurt.shecodes.io/" class="primary-link" target="_blank">Launch Project</a>
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -104,6 +107,9 @@
             <p class="text-center text-muted">
               Built with HTML, CSS and JavaScript
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a href="https://forecasthub.netlify.app/" class="primary-link" target="_blank">Launch Project</a>
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -115,6 +121,9 @@
             <p class="text-center text-muted">
               Built with HTML, CSS with React
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a href="https://www.dictionary.shecodes.io/" class="primary-link soon" target="_blank">Coming soon</a>
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -126,38 +135,64 @@
             <p class="text-center text-muted">
               Built with HTML, CSS with React
             </p>
+            <div class="text-center mt-4 mb-5">
+              <a href="https://www.shecodes.io/" class="primary-link soon" target="_blank">Coming soon</a>
+            </div>
           </div>
         </div>
       </div>
-      <footer>
-        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-          <div>
-            <h4>Work Inquiry</h4>
-            <p class="text-muted">Let's work together</p>
-          </div>
-          <div>
-            <a href="contact.html" class="btn btn-branding mt-3">Contact me</a>
-          </div>
-        </div>
-        <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:patricia@gmail.com" class="email-link">
-            patricia@gmail.com
-          </a>
-        </div>
-        <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/patricia" target="_blank">
-            <i class="fab fa-github" aria-hidden="true"></i>
-          </a>
-          <a href="https://www.instragram.com/patricia" target="_blank">
-            <i class="fab fa-instagram" aria-hidden="true"></i>
-          </a>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            <i class="fab fa-twitter" aria-hidden="true"></i>
-          </a>
-        </div>
-      </footer>
     </div>
-
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a href="contact.html" class="primary-link" title="Contact Hanna"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:anny.wait@gmail.com"
+          class="email-link"
+          title="Email Hanna"
+        >
+          anny.wait@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://github.com/hanna-8l"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fab fa-github" aria-hidden="true"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fab fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fab fa-twitter" aria-hidden="true"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Hanna Liashuk, and is
+        <a href="https://github.com/hanna-8l/About-me" target="_blank"
+          ><open-sourced>open-sourced
+        </a>
+      </p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
